cmake_minimum_required(VERSION 3.24)
project(methodsSolvingProblems2)

set(CMAKE_CXX_STANDARD 20)

add_executable(methodsSolvingProblems2 main.cpp)
add_executable(task_A task_A11.cpp)
add_executable(task_B task_B11.cpp)
add_executable(task_C task_C11.cpp)
add_executable(task_D task_D11.cpp)
add_executable(task_E task_E11.cpp)
add_executable(task_F task_F11.cpp)