cmake_minimum_required(VERSION 3.24)
project(Math)

set(CMAKE_CXX_STANDARD 17)

add_executable(Math main.cpp)
add_executable(taskA task_A12.cpp)
add_executable(taskB task_B12.cpp)
add_executable(taskC task_C12.cpp)
add_executable(taskD task_D12.cpp)
add_executable(taskE task_E12.cpp)
add_executable(taskF task_F12.cpp)