cmake_minimum_required(VERSION 3.24)
project(graphs1)

set(CMAKE_CXX_STANDARD 17)

add_executable(graphs1 main.cpp)
add_executable(taskA task_A6.cpp)
add_executable(taskB task_B6.cpp)
add_executable(taskC task_C6.cpp)
add_executable(taskD task_D6.cpp)
add_executable(taskE task_E6.cpp)
add_executable(taskF task_F6.cpp)
add_executable(taskG task_G6.cpp)