cmake_minimum_required(VERSION 3.24)
project(DynamicProgramming)

set(CMAKE_CXX_STANDARD 17)

add_executable(taskA task_A7.cpp)
add_executable(taskB task_B7.cpp)
add_executable(taskC task_C7.cpp)
add_executable(taskD task_D7.cpp)
add_executable(taskE task_E7.cpp)
add_executable(taskF task_F7.cpp)
add_executable(taskG task_G7.cpp)
add_executable(taskH task_H7.cpp)
