cmake_minimum_required(VERSION 3.24)
project(segmentTrees)

set(CMAKE_CXX_STANDARD 20)

add_executable(segmentTrees main.cpp)
add_executable(taskA task_A8.cpp)
add_executable(taskB task_B8.cpp)
add_executable(taskC task_C8.cpp)
add_executable(taskD task_D8.cpp)
add_executable(taskE task_E8.cpp)
add_executable(taskH task_H8.cpp)