cmake_minimum_required(VERSION 3.24)
project(segmentTrees2)

set(CMAKE_CXX_STANDARD 20)

add_executable(segmentTrees2 main.cpp)
add_executable(taskA task_A9.cpp)
add_executable(taskB task_B9.cpp)
add_executable(taskC task_C9.cpp)
add_executable(taskD task_D9.cpp)
add_executable(taskE task_E9.cpp)
add_executable(taskF task_F9.cpp)
add_executable(taskA2 task_A9_2.cpp)
