cmake_minimum_required(VERSION 3.24)
project(Graphs2)

set(CMAKE_CXX_STANDARD 20)

add_executable(Graphs2 main.cpp)
add_executable(taskA task_A10.cpp)
add_executable(taskB task_B10.cpp)
add_executable(taskC task_C10.cpp)
add_executable(taskD task_D10.cpp)
add_executable(taskE task_E10.cpp)
add_executable(taskF task_F10.cpp)
add_executable(taskG task_G10.cpp)